--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,32 +1,33 @@
 <div class="login-page">
-<div class="login-box">
-      <div class="login-logo">
-        <a href="../../index2.html"><b>Val</b>net</a>
-      </div><!-- /.login-logo -->
-      <div class="login-box-body">
-        <p class="login-box-msg">Entrez vos identifiants</p>
-        <form action="../../index2.html" method="post">
-          <div class="form-group has-feedback">
-            <input type="email" class="form-control" placeholder="Courriel">
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-          </div>
-          <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Mot de passe">
-            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-          </div>
-          <div class="row">
-            <div class="col-xs-8">
+    <div class="login-box">
+        <div class="login-logo">
+            <a href="../../index2.html"><b>Val</b>net</a>
+        </div><!-- /.login-logo -->
+        <div class="login-box-body">
+            <p class="login-box-msg">Entrez vos identifiants</p>
 
-            </div><!-- /.col -->
-            <div class="col-xs-4">
-              <button type="submit" class="btn btn-primary btn-block btn-flat">Valider</button>
-            </div><!-- /.col -->
-          </div>
-        </form>
+            <form {{action "login" on="submit"}}>
+                <div class="form-group has-feedback">
+                    {{input value=formemail type="text" placeholder="Courriel" class="form-control" required = true}}
+                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                </div>
+                <div class="form-group has-feedback">
+                    {{input value=formpassword type="password" placeholder="Mot de passe" class="form-control" required = true}}
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">
 
-        <a href="#">J'ai oublié mon mot de passe</a><br>
+                    </div><!-- /.col -->
+                    <div class="col-xs-4">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">Valider</button>
+                    </div><!-- /.col -->
+                </div>
+            </form>
 
-      </div><!-- /.login-box-body -->
+            <a href="#">J'ai oublié mon mot de passe</a><br>
+
+        </div><!-- /.login-box-body -->
     </div><!-- /.login-box -->
-    </div>
+</div>
 {{outlet}}
