--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -8,8 +8,8 @@
 
             <form {{action "login" on="submit"}}>
                 <div class="form-group has-feedback">
-                    {{input value=formemail type="text" placeholder="Courriel" class="form-control" required = true}}
-                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                    {{input value=formemail type="text" placeholder="Nom d'utilisateur" class="form-control" required = true}}
+                    <span class="glyphicon glyphicon-user form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
                     {{input value=formpassword type="password" placeholder="Mot de passe" class="form-control" required = true}}
