--- a/app/templates/components/side-menu.hbs
+++ b/app/templates/components/side-menu.hbs
@@ -16,15 +16,15 @@
           <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
             <li class="active treeview">
-              <a href="#">
+             {{#link-to 'dashboard'}}
                 <i class="fa fa-dashboard"></i> <span>Tableau de bord</span>
-              </a>
+              {{/link-to}}
             </li>
             <li class="treeview">
-              <a href="#">
+              {{#link-to 'poserconge'}}
                 <i class="fa fa-calendar-plus-o"></i>
-                <span>Poser un congé</span>
-              </a>
+                <span>Prendre un congé</span>
+              {{/link-to}}
             </li>
 
           </ul>
